--- a/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
+++ b/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
@@ -1541,7 +1541,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>Don’t get me wrong, GUIs are great and have many advantages, like not taking 30 minutes to figure out the best coordinates for your labels. But it is that nice feeling of seeing a map somewhere and thinking: <em>How did this person do that? Which tools/packages did they use? Did they go through crazy workarounds to get that effect?</em>; and then actually being able to scan the building blocks of that map and answer those questions and test those effects for yourself, <strong>that makes the difference for me</strong>.</p>
 <p>Of course, this can only happen when code is shared. I personally love R’s capabilities for creating nice maps/figures and I myself used only R for this challenge (except for <a href="https://raw.githubusercontent.com/loreabad6/30DayMapChallenge/main/maps/day15.jpg">Day 15: map without a computer</a>).</p>
 <p>Many other mappers used R for their challenge as well. Here are some of the GitHub repositories and Gists I found, that used R for their challenge:</p>
-<p><a href="https://github.com/gkaramanis/30DayMapChallenge">gkaramanis</a> | <a href="https://github.com/schochastics/30DayMapChallenge">schochastics</a> | <a href="https://github.com/shandiya/30DayMapChallenge">shandiya</a> | <a href="https://gist.github.com/dakvid/">dakvid</a> | <a href="https://github.com/leeolney3/30DayMapChallenge">leeolney3</a> | <a href="https://github.com/tashapiro/30DayMapChallenge">tashapiro</a> | <a href="https://github.com/bydata/30DayMapChallenge-2021">bydata</a></p>
+<p><a href="https://github.com/richardvogg/30DayMapChallenge21">richardvogg</a> | <a href="https://github.com/gkaramanis/30DayMapChallenge">gkaramanis</a> | <a href="https://github.com/schochastics/30DayMapChallenge">schochastics</a> | <a href="https://github.com/shandiya/30DayMapChallenge">shandiya</a> | <a href="https://gist.github.com/dakvid/">dakvid</a> | <a href="https://github.com/leeolney3/30DayMapChallenge">leeolney3</a> | <a href="https://github.com/tashapiro/30DayMapChallenge">tashapiro</a> | <a href="https://github.com/bydata/30DayMapChallenge-2021">bydata</a></p>
 <p>I don’t mean this in any way as a comprehensive list, but just a sample of all the creative code out there during this edition of the challenge. For some further examples check <a href="https://david.frigge.nz/3RDayMapChallenge">David Frigge’s awesome gallery</a>!</p>
 <h1 id="metamapping-my-challenge">Metamapping my challenge</h1>
 <p>The final day of the challenge is metamapping day. According to the details one can:</p>
@@ -1588,12 +1588,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>Another package of the tidyverse is <em><strong>ggplot2</strong></em>, which introduces the grammar of graphics into R and is extremely powerful to create awesome visualizations. Two main functions allow you to combine this package with spatial data: <code>geom_sf()</code> and <code>geom_stars()</code>. One interesting tip, if you learn to use <code>coord_sf()</code>, you can do things like assigning a CRS to your plot, although your data has a different projection, as <code>coord_sf(crs ="+proj=geos")</code></p>
 <p>This are the ggplot extensions I use the most:</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="zjrpbofnnv" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="gugyhiggxk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#zjrpbofnnv .gt_table {
+#gugyhiggxk .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -1618,7 +1618,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_heading {
+#gugyhiggxk .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -1630,7 +1630,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_title {
+#gugyhiggxk .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -1640,7 +1640,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#zjrpbofnnv .gt_subtitle {
+#gugyhiggxk .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -1650,13 +1650,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#zjrpbofnnv .gt_bottom_border {
+#gugyhiggxk .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_col_headings {
+#gugyhiggxk .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1671,7 +1671,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_col_heading {
+#gugyhiggxk .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1691,7 +1691,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zjrpbofnnv .gt_column_spanner_outer {
+#gugyhiggxk .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1703,15 +1703,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#zjrpbofnnv .gt_column_spanner_outer:first-child {
+#gugyhiggxk .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zjrpbofnnv .gt_column_spanner_outer:last-child {
+#gugyhiggxk .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zjrpbofnnv .gt_column_spanner {
+#gugyhiggxk .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -1723,7 +1723,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#zjrpbofnnv .gt_group_heading {
+#gugyhiggxk .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1745,7 +1745,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zjrpbofnnv .gt_empty_group_heading {
+#gugyhiggxk .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1760,15 +1760,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zjrpbofnnv .gt_from_md > :first-child {
+#gugyhiggxk .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zjrpbofnnv .gt_from_md > :last-child {
+#gugyhiggxk .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zjrpbofnnv .gt_row {
+#gugyhiggxk .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1787,7 +1787,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zjrpbofnnv .gt_stub {
+#gugyhiggxk .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1799,7 +1799,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#zjrpbofnnv .gt_summary_row {
+#gugyhiggxk .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1809,7 +1809,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zjrpbofnnv .gt_first_summary_row {
+#gugyhiggxk .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1819,7 +1819,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_grand_summary_row {
+#gugyhiggxk .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1829,7 +1829,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zjrpbofnnv .gt_first_grand_summary_row {
+#gugyhiggxk .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1839,11 +1839,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_striped {
+#gugyhiggxk .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zjrpbofnnv .gt_table_body {
+#gugyhiggxk .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1852,7 +1852,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_footnotes {
+#gugyhiggxk .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1866,13 +1866,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_footnote {
+#gugyhiggxk .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#zjrpbofnnv .gt_sourcenotes {
+#gugyhiggxk .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1886,41 +1886,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zjrpbofnnv .gt_sourcenote {
+#gugyhiggxk .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#zjrpbofnnv .gt_left {
+#gugyhiggxk .gt_left {
   text-align: left;
 }
 
-#zjrpbofnnv .gt_center {
+#gugyhiggxk .gt_center {
   text-align: center;
 }
 
-#zjrpbofnnv .gt_right {
+#gugyhiggxk .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zjrpbofnnv .gt_font_normal {
+#gugyhiggxk .gt_font_normal {
   font-weight: normal;
 }
 
-#zjrpbofnnv .gt_font_bold {
+#gugyhiggxk .gt_font_bold {
   font-weight: bold;
 }
 
-#zjrpbofnnv .gt_font_italic {
+#gugyhiggxk .gt_font_italic {
   font-style: italic;
 }
 
-#zjrpbofnnv .gt_super {
+#gugyhiggxk .gt_super {
   font-size: 65%;
 }
 
-#zjrpbofnnv .gt_footnote_marks {
+#gugyhiggxk .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -1995,12 +1995,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="honorable-mentions">Honorable mentions</h2>
 <p>Although not on the top 7 above, there are some packages that I use frequently, but were not so used for this challenge. There are also really cool packages that I only discovered in the past month. Here is a table of how I used them:</p>
 <div class="layout-chunk" data-layout="l-body-outset">
-<div id="hsinzgvsfo" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="dmxhockegm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#hsinzgvsfo .gt_table {
+#dmxhockegm .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2025,7 +2025,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_heading {
+#dmxhockegm .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2037,7 +2037,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_title {
+#dmxhockegm .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2047,7 +2047,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#hsinzgvsfo .gt_subtitle {
+#dmxhockegm .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2057,13 +2057,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#hsinzgvsfo .gt_bottom_border {
+#dmxhockegm .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_col_headings {
+#dmxhockegm .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2078,7 +2078,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_col_heading {
+#dmxhockegm .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2098,7 +2098,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#hsinzgvsfo .gt_column_spanner_outer {
+#dmxhockegm .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2110,15 +2110,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#hsinzgvsfo .gt_column_spanner_outer:first-child {
+#dmxhockegm .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hsinzgvsfo .gt_column_spanner_outer:last-child {
+#dmxhockegm .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hsinzgvsfo .gt_column_spanner {
+#dmxhockegm .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2130,7 +2130,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#hsinzgvsfo .gt_group_heading {
+#dmxhockegm .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2152,7 +2152,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#hsinzgvsfo .gt_empty_group_heading {
+#dmxhockegm .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2167,15 +2167,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#hsinzgvsfo .gt_from_md > :first-child {
+#dmxhockegm .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hsinzgvsfo .gt_from_md > :last-child {
+#dmxhockegm .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hsinzgvsfo .gt_row {
+#dmxhockegm .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2194,7 +2194,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#hsinzgvsfo .gt_stub {
+#dmxhockegm .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2206,7 +2206,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#hsinzgvsfo .gt_summary_row {
+#dmxhockegm .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2216,7 +2216,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#hsinzgvsfo .gt_first_summary_row {
+#dmxhockegm .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2226,7 +2226,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_grand_summary_row {
+#dmxhockegm .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2236,7 +2236,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#hsinzgvsfo .gt_first_grand_summary_row {
+#dmxhockegm .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2246,11 +2246,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_striped {
+#dmxhockegm .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hsinzgvsfo .gt_table_body {
+#dmxhockegm .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2259,7 +2259,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_footnotes {
+#dmxhockegm .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2273,13 +2273,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_footnote {
+#dmxhockegm .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#hsinzgvsfo .gt_sourcenotes {
+#dmxhockegm .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2293,41 +2293,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hsinzgvsfo .gt_sourcenote {
+#dmxhockegm .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#hsinzgvsfo .gt_left {
+#dmxhockegm .gt_left {
   text-align: left;
 }
 
-#hsinzgvsfo .gt_center {
+#dmxhockegm .gt_center {
   text-align: center;
 }
 
-#hsinzgvsfo .gt_right {
+#dmxhockegm .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hsinzgvsfo .gt_font_normal {
+#dmxhockegm .gt_font_normal {
   font-weight: normal;
 }
 
-#hsinzgvsfo .gt_font_bold {
+#dmxhockegm .gt_font_bold {
   font-weight: bold;
 }
 
-#hsinzgvsfo .gt_font_italic {
+#dmxhockegm .gt_font_italic {
   font-style: italic;
 }
 
-#hsinzgvsfo .gt_super {
+#dmxhockegm .gt_super {
   font-size: 65%;
 }
 
-#hsinzgvsfo .gt_footnote_marks {
+#dmxhockegm .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
